welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:4: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	}else if(temp1<=0 && temp2=100 ||temp1=100 && temp2<=0){
                          ^icyHot:6: error: reassignment to val
	}else if(temp1=0 && temp2>=100 ||temp1>=100 && temp2=0){
                      ^icyHot:6: error: type mismatch;
 found   : Unit
 required: Boolean
	}else if(temp1=0 && temp2>=100 ||temp1>=100 && temp2=0){
              ^